--- a/static/field.css
+++ b/static/field.css
@@ -13,11 +13,12 @@ h1 {
   margin-bottom: 20px;
 }
 
+/* ---------- Campo de juego ---------- */
 .field {
   position: relative;
   width: 80vw;
   max-width: 900px;
-  height: 120vh;
+  height: 110vh;
   margin: 0 auto;
   background: linear-gradient(180deg, #1b5e20 0%, #2e7d32 100%);
   border: 5px solid #fff;
@@ -26,6 +27,7 @@ h1 {
   box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
 
+/* ---------- Jugadores ---------- */
 .player-card {
   position: absolute;
   width: 90px;
@@ -69,6 +71,67 @@ h1 {
 
 .formation-4_4_2 .player-card:nth-child(10) { top: 25%; left: 35%; }
 .formation-4_4_2 .player-card:nth-child(11) { top: 25%; left: 65%; }
+
+/* ---------- Formación 4-3-3 ---------- */
+.formation-4_3_3 .player-card:nth-child(1) { top: 90%; left: 50%; }
+.formation-4_3_3 .player-card:nth-child(2) { top: 70%; left: 20%; }
+.formation-4_3_3 .player-card:nth-child(3) { top: 70%; left: 40%; }
+.formation-4_3_3 .player-card:nth-child(4) { top: 70%; left: 60%; }
+.formation-4_3_3 .player-card:nth-child(5) { top: 70%; left: 80%; }
+
+.formation-4_3_3 .player-card:nth-child(6) { top: 50%; left: 30%; }
+.formation-4_3_3 .player-card:nth-child(7) { top: 50%; left: 50%; }
+.formation-4_3_3 .player-card:nth-child(8) { top: 50%; left: 70%; }
+
+.formation-4_3_3 .player-card:nth-child(9) { top: 25%; left: 25%; }
+.formation-4_3_3 .player-card:nth-child(10) { top: 25%; left: 50%; }
+.formation-4_3_3 .player-card:nth-child(11) { top: 25%; left: 75%; }
+
+/* ---------- Formación 3-5-2 ---------- */
+.formation-3_5_2 .player-card:nth-child(1) { top: 90%; left: 50%; }
+.formation-3_5_2 .player-card:nth-child(2) { top: 70%; left: 30%; }
+.formation-3_5_2 .player-card:nth-child(3) { top: 70%; left: 50%; }
+.formation-3_5_2 .player-card:nth-child(4) { top: 70%; left: 70%; }
+
+.formation-3_5_2 .player-card:nth-child(5) { top: 50%; left: 15%; }
+.formation-3_5_2 .player-card:nth-child(6) { top: 50%; left: 35%; }
+.formation-3_5_2 .player-card:nth-child(7) { top: 50%; left: 50%; }
+.formation-3_5_2 .player-card:nth-child(8) { top: 50%; left: 65%; }
+.formation-3_5_2 .player-card:nth-child(9) { top: 50%; left: 85%; }
+
+.formation-3_5_2 .player-card:nth-child(10) { top: 25%; left: 40%; }
+.formation-3_5_2 .player-card:nth-child(11) { top: 25%; left: 60%; }
+
+/* ---------- Formación 5-3-2 ---------- */
+.formation-5_3_2 .player-card:nth-child(1) { top: 90%; left: 50%; }
+.formation-5_3_2 .player-card:nth-child(2) { top: 70%; left: 10%; }
+.formation-5_3_2 .player-card:nth-child(3) { top: 70%; left: 30%; }
+.formation-5_3_2 .player-card:nth-child(4) { top: 70%; left: 50%; }
+.formation-5_3_2 .player-card:nth-child(5) { top: 70%; left: 70%; }
+.formation-5_3_2 .player-card:nth-child(6) { top: 70%; left: 90%; }
+
+.formation-5_3_2 .player-card:nth-child(7) { top: 50%; left: 30%; }
+.formation-5_3_2 .player-card:nth-child(8) { top: 50%; left: 50%; }
+.formation-5_3_2 .player-card:nth-child(9) { top: 50%; left: 70%; }
+
+.formation-5_3_2 .player-card:nth-child(10) { top: 25%; left: 40%; }
+.formation-5_3_2 .player-card:nth-child(11) { top: 25%; left: 60%; }
+
+/* ---------- Formación 4-2-3-1 ---------- */
+.formation-4_2_3_1 .player-card:nth-child(1) { top: 90%; left: 50%; }
+.formation-4_2_3_1 .player-card:nth-child(2) { top: 70%; left: 20%; }
+.formation-4_2_3_1 .player-card:nth-child(3) { top: 70%; left: 40%; }
+.formation-4_2_3_1 .player-card:nth-child(4) { top: 70%; left: 60%; }
+.formation-4_2_3_1 .player-card:nth-child(5) { top: 70%; left: 80%; }
+
+.formation-4_2_3_1 .player-card:nth-child(6) { top: 55%; left: 40%; }
+.formation-4_2_3_1 .player-card:nth-child(7) { top: 55%; left: 60%; }
+
+.formation-4_2_3_1 .player-card:nth-child(8) { top: 40%; left: 25%; }
+.formation-4_2_3_1 .player-card:nth-child(9) { top: 40%; left: 50%; }
+.formation-4_2_3_1 .player-card:nth-child(10) { top: 40%; left: 75%; }
+
+.formation-4_2_3_1 .player-card:nth-child(11) { top: 20%; left: 50%; }
 
 /* ---------- Botón volver ---------- */
 .btn {
